// Copyright (c) The Libra Core Contributors
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package secret_service;

// -----------------------------------------------------------------------------
// ---------------- Service definition
// -----------------------------------------------------------------------------
service SecretService {
    // API to request key generation
    rpc GenerateKey (GenerateKeyRequest) returns (GenerateKeyResponse) {}
    // API to request a public key
    rpc GetPublicKey (PublicKeyRequest) returns (PublicKeyResponse) {}   
    // API to request a signature
    rpc Sign (SignRequest) returns (SignResponse) {}
}

message GenerateKeyRequest {
    // Spec gives a way to generate the key (potentially BIP32 private derivation path here)
    KeyType spec = 1;
}

message GenerateKeyResponse {
    bytes key_id = 1;
    ErrorCode code = 2;
}

message PublicKeyRequest {
    bytes key_id = 1;
}

message PublicKeyResponse {
    bytes public_key = 1;
    ErrorCode code = 2;
}

message SignRequest {
    bytes key_id = 1;
    // message_hash should be a prehashed message of length crypto::HashValue::LENGTH = 32 bytes
    bytes message_hash = 2;
}

message SignResponse {
  bytes signature = 1;
  ErrorCode code = 2;
}

enum ErrorCode {
    Success = 0;
    KeyIdNotFound = 1;
    WrongLength = 2;
    InvalidParameters = 3;
    AuthenticationFailed = 4;
    Unspecified = 5;
    
    // Good examples of more error codes: https://developers.yubico.com/YubiHSM2/Component_Reference/KSP/Status_codes.html
}

enum KeyType {
     Ed25519 = 0;
     BLS12381 = 1;
}
